# RefutationSpectralConjectures

./: Cargo.toml  README.md
src/: main.rs
src/methods/: BFS.rs  CMAES.rs  GRAVE.rs  ILS.rs  NMCS.rs  NRPA.rs  mod.rs
src/models/: mod.rs
src/models/conjectures/: conjectures_wagner_1.rs  mod.rs
src/tools/: calc.rs  graphToDot.rs  mod.rs  saveMatrix.rs
