members = ["refutation_conjectures"]
[package]
name = "refutation"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.1"
rand_distr = "0.4.3"
stat = "0.2.0"
ndarray-linalg = "0.15.0"
nalgebra = "0.30.1"
rand = "0.8.5"
dot = "0.1.4"
ndarray-rand = "0.13"
